# ypbank_system

./: Cargo.toml  README.md
specs/: project_assignment.md
specs/examples/: MT940 github 1.mt940  MT_940 aiophotoz.mt940  MT_940 oracle.mt940  Sources.md  camt 053 danske bank  camt 053 treasurease  mt 940 gs.mt940  Пример выписки по счёту 1.csv  Пример выписки по счёту 1.xlsx
src/: camt053_format.rs  conversion.rs  csv_format.rs  error.rs  lib.rs  mt940_format.rs  types.rs
