[package]
name = "ypbank_system"
version = "0.1.0"
edition = "2021"

[lib]
name = "ypbank_system"
path = "src/lib.rs"

[[bin]]
name = "ypbank_converter"
path = "src/bin/converter.rs"

[[bin]]
name = "ypbank_compare"
path = "src/bin/comparer.rs"

[dependencies]
# XML parsing for CAMT.053
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"

# CSV parsing
csv = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Better decimal handling for financial amounts
rust_decimal = "1"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1"
